--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "markdown-it-link-attributes": "^4.0.1",
     "markdown-it-task-checkbox": "^1.0.6",
     "moment": "^2.30.1",
+    "moment-jalaali": "^0.10.4",
     "p-queue": "^8.0.1",
     "url-search-params-polyfill": "^8.2.5",
     "vue": "^2.7.15",
