--- a/package.json
+++ b/package.json
@@ -39,11 +39,11 @@
     "@nextcloud/event-bus": "^3.3.2",
     "@nextcloud/files": "^3.10.1",
     "@nextcloud/initial-state": "^2.2.0",
-    "@nextcloud/l10n": "^3.1.0",
-    "@nextcloud/moment": "^1.3.4",
+    "@nextcloud/l10n": "^3.4.0",
+    "@nextcloud/moment": "^1.3.5",
     "@nextcloud/notify_push": "^1.3.0",
     "@nextcloud/router": "^3.0.1",
-    "@nextcloud/vue": "^8.27.0",
+    "@nextcloud/vue": "^8.31.0",
     "blueimp-md5": "^2.19.0",
     "chroma-js": "^3.1.2",
     "dompurify": "^3.2.5",
@@ -59,6 +59,7 @@
     "vue-click-outside": "^1.1.0",
     "vue-easymde": "^2.0.0",
     "vue-infinite-loading": "^2.4.5",
+    "vue-loader": "^15.11.1",
     "vue-material-design-icons": "^5.3.1",
     "vue-router": "^3.6.5",
     "vue-smooth-dnd": "^0.8.1",
