--- a/composer.json
+++ b/composer.json
@@ -9,31 +9,35 @@
 		}
 	],
 	"require": {
-		"justinrainbow/json-schema": "^6.0"
+		"justinrainbow/json-schema": "^6.0",
+		"bamarni/composer-bin-plugin": "^1.8"
 	},
 	"require-dev": {
 		"roave/security-advisories": "dev-master",
 		"phpunit/phpunit": "^9",
 		"nextcloud/coding-standard": "^1.1",
-		"nextcloud/ocp": "dev-master",
-		"psalm/phar": "^5.13"
+		"nextcloud/ocp": "dev-master"
 	},
 	"config": {
 		"optimize-autoloader": true,
 		"allow-plugins": {
-			"composer/package-versions-deprecated": true
+			"composer/package-versions-deprecated": true,
+			"bamarni/composer-bin-plugin": true
 		},
 		"platform": {
 			"php": "8.1"
 		}
 	},
 	"scripts": {
+		"post-install-cmd": [
+			"@composer bin all install --ansi"
+		],
 		"lint": "find . -name \\*.php -not -path './vendor/*' -print0 | xargs -0 -n1 php -l",
 		"cs:check": "php-cs-fixer fix --dry-run --diff",
 		"cs:fix": "php-cs-fixer fix",
-		"psalm": "psalm.phar",
-		"psalm:update-baseline": "psalm.phar --update-baseline",
-		"psalm:fix": "psalm.phar --alter --issues=InvalidReturnType,InvalidNullableReturnType,MismatchingDocblockParamType,MismatchingDocblockReturnType,MissingParamType,InvalidFalsableReturnType",
+		"psalm": "psalm",
+		"psalm:update-baseline": "psalm --threads=$(nproc) --no-cache --update-baseline",
+		"psalm:fix": "psalm --alter --issues=InvalidReturnType,InvalidNullableReturnType,MismatchingDocblockParamType,MismatchingDocblockReturnType,MissingParamType,InvalidFalsableReturnType",
 		"test": [
 			"@test:unit",
 			"@test:integration"
