--- a/package.json
+++ b/package.json
@@ -40,18 +40,17 @@
     "@nextcloud/files": "^3.10.1",
     "@nextcloud/initial-state": "^2.2.0",
     "@nextcloud/l10n": "^3.4.0",
-    "@nextcloud/moment": "^1.3.5",
     "@nextcloud/notify_push": "^1.3.0",
     "@nextcloud/router": "^3.0.1",
     "@nextcloud/vue": "^8.31.0",
     "blueimp-md5": "^2.19.0",
     "chroma-js": "^3.1.2",
+    "date-fns": "^4.1.0",
     "dompurify": "^3.2.5",
     "lodash": "^4.17.21",
     "markdown-it": "^14.1.0",
     "markdown-it-link-attributes": "^4.0.1",
     "markdown-it-task-checkbox": "^1.0.6",
-    "moment": "^2.30.1",
     "p-queue": "^8.0.1",
     "url-search-params-polyfill": "^8.2.5",
     "vue": "^2.7.15",
