--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -56,14 +56,7 @@ jobs:
         with:
           repository: nextcloud/server
           ref: ${{ matrix.server-versions }}
-
-      - name: Checkout submodules
-        shell: bash
-        run: |
-          auth_header="$(git config --local --get http.https://github.com/.extraheader)"
-          git submodule sync --recursive
-          git -c "http.extraheader=$auth_header" -c protocol.version=2 submodule update --init --force --recursive --depth=1
-          cd build/integration && composer require --dev phpunit/phpunit:~9
+          submodules: true
 
       - name: Checkout app
         uses: actions/checkout@v4.2.2
