fix: add filename validation with proper error handling
- Add unit tests for FilesAppService filename validation
- Add filename validation using IFilenameValidator
- Handle InvalidPathException and convert to BadRequestException
- Map sanitized characters (e.g., ':' to '/') for better UX
- Fix integration test workflow to handle missing log files
- Improve code comments for better explanation of edge cases

Signed-off-by: samin zavarkesh <samin.zavarkesh@gmail.com>

--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -107,7 +107,12 @@ jobs:
 
       - name: Print log
         if: always()
-        run: cat data/nextcloud.log
+        run: |
+          if [ -f data/nextcloud.log ]; then
+            cat data/nextcloud.log
+          else
+            echo "Log file not found"
+          fi
 
       - name: Query count
         if: ${{ matrix.databases == 'mysql' }}
