--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
 		"roave/security-advisories": "dev-master",
 		"phpunit/phpunit": "^9",
 		"nextcloud/coding-standard": "^1.1",
-		"nextcloud/ocp": "dev-master"
+		"nextcloud/ocp": "dev-stable33"
 	},
 	"config": {
 		"optimize-autoloader": true,
