--- a/.github/workflows/cypress-e2e.yml
+++ b/.github/workflows/cypress-e2e.yml
@@ -22,7 +22,7 @@ jobs:
         node-version: [20.x]
         containers: [1, 2, 3]
         php-versions: [ '8.2' ]
-        server-versions: [ 'master' ]
+        server-versions: [ 'stable33' ]
 
     name: runner ${{ matrix.containers }}
 
