--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
 		"bamarni/composer-bin-plugin": "^1.8"
 	},
 	"require-dev": {
-		"roave/security-advisories": "dev-master",
+		"roave/security-advisories": "dev-latest",
 		"phpunit/phpunit": "^9",
 		"nextcloud/coding-standard": "^1.1",
 		"nextcloud/ocp": "dev-master"
