--- a/.github/workflows/cypress-e2e.yml
+++ b/.github/workflows/cypress-e2e.yml
@@ -142,7 +142,7 @@ jobs:
           retention-days: 5
 
   summary:
-      runs-on: ubuntu-latest
+      runs-on: ubuntu-latest-low
       needs: [ cypress ]
 
       if: always()
